fix: adjust mobile gap for stats30 text and value

--- a/editor-components/stats/stats30/stats30.module.scss
+++ b/editor-components/stats/stats30/stats30.module.scss
@@ -145,6 +145,8 @@
                     grid-template-columns: repeat(1, 1fr);
 
                     .stat-item {
+                        gap: 1.5rem;
+
                         .stat-value-container {
 
                             .stat-value,
